# zmanim-tracker

./: .dockerignore  .gitignore  .gitlab-ci.yml  AGENTS.md  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml  run_zmanim_tracker.bat  run_zmanim_tracker.sh  zmanim_tracker.py
.agents/skills/data-driven-check/: SKILL.md
.agents/skills/phase-awareness/: SKILL.md
.agents/skills/validation-protocol/: SKILL.md
.codex/: hooks.json
.codex/commands/: phase-status.md  pre-commit.md  review.md  scaffold.md  validate.md
.github/workflows/: ci.yml  release.yml
docs/: ZMANIM_TRACKER_MASTER_PLAN.md  status.md  versions.md
src/: __init__.py  app.py
src/engine/: __init__.py  solar_angle_solver.py  zmanim_calculator.py  zmanim_data_builder.py
src/location/: __init__.py  location_resolver.py
src/models/: __init__.py  location.py  solar_primitives_utc.py  zmanim_row.py
src/visualization/: __init__.py  zmanim_plotter.py
tests/: __init__.py  conftest.py  test_app.py  test_location.py  test_location_resolver.py  test_solar_angle_solver.py  test_solar_primitives_utc.py  test_zmanim_calculator.py  test_zmanim_data_builder.py  test_zmanim_plotter.py  test_zmanim_row.py
