[project]
name = "zmanim-tracker"
version = "0.1.0"
description = "Halachic prayer times (zmanim) calculator and tracker"
requires-python = ">=3.13"
dependencies = [
    "streamlit>=1.40.0",
    "astral>=3.2",
    "pandas>=2.2.0",
    "plotly>=5.24.0",
    "requests>=2.32.0",
    "pgeocode>=0.4.0",
    "timezonefinder>=6.5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-cov>=6.0.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.8.0",
    "responses>=0.25.0",
]

[tool.ruff]
line-length = 120
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "ANN"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["ANN"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
asyncio_mode = "auto"
addopts = "--cov=src --cov-report=term-missing --cov-fail-under=100"

[tool.coverage.report]
exclude_also = [
    "if __name__ == .__main__.:",
    "pragma: no cover",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]